# PesquisaTeses

./: .gitignore  LICENSE  Readme.md  TesesDissertacoes.csv  TesesDissertacoes2008-2016.csv  arquivoOutput.csv  banco-dados-teses-consulta.py  base-dados-teses-cria.py  base-dados-teses-insercao.py  consultas.py  crawler.py  infos  infos.md  lista_teses_dissertacoes.py  listagem.py  main.py  programa.txt  pyproject.toml  tesesDissertacoes.db  teses_dissertacoes_2008_2016.py  testes.py  totalGrauAcademico.txt  total_grau_academico.py  total_instituicoes.csv  total_instituicoes.py  total_programas.csv  total_programas.py
